--- a/ss.css
+++ b/ss.css
@@ -13,6 +13,12 @@ mark.red {
     background-color: rgb(75, 75, 75);
 }
 
+summary {
+    font-size: 40px;
+    text-align: center;
+    font-weight: bold;
+}
+
 a {
     font-size: 20px;
     color: rgb(243, 243, 243);
@@ -36,13 +42,21 @@ h3 {
     font-family: "Cantarell Light", "Calibri Light", "Ubuntu", Tahoma, sans-serif;
 }
 
+h4 {
+    font-size: 20px;
+    font-weight: normal;
+    margin-left: 30px;
+    font-family: "Cantarell Light", "Calibri Light", "Ubuntu", Tahoma, sans-serif;
+}
+
 #news {
     background-color: rgb(75, 75, 75);
     overflow-x: hidden;
     overflow-y: auto;
-    width: 49.5%;
-    height: 500px;
-    float: left
+    width: 39.3%;
+    height: 550px;
+    float: left;
+    margin-left: 10px;
 }
 
 #links {
@@ -50,7 +64,7 @@ h3 {
     overflow-x: hidden;
     overflow-y: auto;
     width: 20%;
-    height: 750px;
+    height: 550px;
     float: right;
 }
 
@@ -67,7 +81,7 @@ h3 {
     margin-left: auto;
     margin-right: auto;
     display: block;
-  }
+}
 
 .ribbon {
     --p: 8px;
