--- a/ss.css
+++ b/ss.css
@@ -107,3 +107,22 @@ h4 {
     padding: 10px;
     border: 5px solid #ff0000;
 }
+
+h5 {
+    font-size: 24px;
+    font-weight: normal;
+    text-align: center;
+}
+
+
+.center {
+    margin: auto;
+    width: 70%;
+    border: 5px solid rgb(75, 75, 75);
+    padding: 10px;
+}
+
+#obsimg {
+    max-height: auto;
+    max-width: 100%;
+}
