--- a/mobile.css
+++ b/mobile.css
@@ -55,9 +55,9 @@ h4 {
     overflow-y: auto;
     width: 100%;
     height: auto;
-    margin-top: 10px;
-    margin-left: 10px;
-    margin-right: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 10px;
 }
 
 #links {
@@ -67,8 +67,8 @@ h4 {
     width: 100%;
     height: auto;
     margin-top: 10px;
-    margin-left: 10px;
-    margin-right: 10px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 #about {
@@ -78,7 +78,8 @@ h4 {
     width: 100%;
     height: auto;
     margin-top: 10px;
-    margin-left: 5px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 #jsklogo {
