--- a/mobile.css
+++ b/mobile.css
@@ -110,9 +110,10 @@ h4 {
 
 #error {
     margin: auto;
-    width: 10%;
+    width: 90%;
     padding: 10px;
     border: 5px solid #ff0000;
+    text-align: center;
 }
 
 h5 {
