--- a/mobile.css
+++ b/mobile.css
@@ -110,7 +110,7 @@ h4 {
 
 #error {
     margin: auto;
-    width: 90%;
+    width: auto;
     padding: 10px;
     border: 5px solid #ff0000;
     text-align: center;
