--- a/ss.css
+++ b/ss.css
@@ -49,7 +49,13 @@ h4 {
     font-family: "Cantarell Light", "Calibri Light", "Ubuntu", Tahoma, sans-serif;
 }
 
-#news {
+h5 {
+    font-size: 40px;
+    text-align: center;
+    font-weight: normal;
+}
+
+.news {
     background-color: rgb(75, 75, 75);
     overflow-x: hidden;
     overflow-y: auto;
