--- a/ss.css
+++ b/ss.css
@@ -40,6 +40,7 @@ h3 {
     font-size: 40px;
     text-align: center;
     font-family: "Cantarell Light", "Calibri Light", "Ubuntu", Tahoma, sans-serif;
+    font-weight: normal;
 }
 
 h4 {
@@ -129,7 +130,6 @@ h5 {
     padding: 10px;
 }
 
-#obsimg {
-    max-height: auto;
+.obsimg {
     max-width: 100%;
 }
