--- a/ss.css
+++ b/ss.css
@@ -1,7 +1,7 @@
 body {
     background-color: rgb(44, 44, 44);
     color: rgb(243, 243, 243);
-    font-family: "Ubuntu", Tahoma, sans-serif
+    font-family: "Ubuntu", "Calibri Light", Tahoma, sans-serif;
 }
 
 p {
@@ -22,7 +22,6 @@ summary {
 a {
     font-size: 20px;
     color: rgb(243, 243, 243);
-    font-family: "Cantarell Light", "Calibri Light", "Ubuntu", Tahoma, sans-serif;
     text-align: center;
 }
 
