--- a/mobile.css
+++ b/mobile.css
@@ -62,6 +62,7 @@ h5 {
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 10px;
+    border-radius: 5px;
 }
 
 #links {
@@ -73,6 +74,7 @@ h5 {
     margin-top: 10px;
     margin-left: auto;
     margin-right: auto;
+    border-radius: 5px;
 }
 
 #about {
@@ -118,6 +120,7 @@ h5 {
     padding: 10px;
     border: 5px solid #ff0000;
     text-align: center;
+    border-radius: 5px;
 }
 
 h5 {
